ajout d'un code couleur sur les vehicules loues ou non

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFF</color>
+    <color name="colorLibre">#a8f0a3</color>
+    <color name="colorOccupee">#fbc4bf</color>
 </resources>
