--- a/app/src/main/res/layout/element_dans_liste.xml
+++ b/app/src/main/res/layout/element_dans_liste.xml
@@ -6,6 +6,7 @@
     android:layout_margin="10dp"
     app:cardCornerRadius="5sp">
     <RelativeLayout
+        android:id="@+id/layoutElementVehicule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
