--- a/app/src/main/res/layout/activity_detail_vehicule.xml
+++ b/app/src/main/res/layout/activity_detail_vehicule.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,4 +12,14 @@
         android:layout_height="match_parent"
         android:text="Bienvenue dans DetailActivity"/>
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="240dp"
+        android:layout_weight="0.5"
+        android:layout_margin="5dp"
+        android:text="@string/LouerVéhicule"
+        android:textColor="#FF0000"
+        android:onClick="createLocation"/>
+
+
+</RelativeLayout>
