--- a/app/src/main/res/layout/activity_detail_vehicule.xml
+++ b/app/src/main/res/layout/activity_detail_vehicule.xml
@@ -7,19 +7,38 @@
     android:layout_height="match_parent"
     tools:context=".DetailVehiculeActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Bienvenue dans DetailActivity"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="240dp"
-        android:layout_weight="0.5"
-        android:layout_margin="5dp"
-        android:text="@string/LouerVéhicule"
-        android:textColor="#FF0000"
-        android:onClick="createLocation"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="136dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="0.5"
+            android:background="@color/colorRestitution"
+            android:onClick="returnLocation"
+            android:text="@string/RetourVehicule"
+            android:textColor="@color/colorWhite"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="0.5"
+            android:background="@color/colorAjouter"
+            android:onClick="createLocation"
+            android:text="@string/LouerVehicule"
+            android:textColor="@color/colorWhite" />
+    </LinearLayout>
+
+
 
 
 </RelativeLayout>
