--- a/app/src/main/res/layout/activity_resume_location.xml
+++ b/app/src/main/res/layout/activity_resume_location.xml
@@ -5,5 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ResumeLocationActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        >
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/recherche"
+            android:layout_weight="0.3"
+            android:hint="Nom du client"
+            android:id="@+id/resultatRecherche"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="recherche"
+            android:layout_weight="0.7"
+            android:onClick="onClickRechercheClient"/>
+
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
