--- a/app/src/main/res/layout/activity_details_client.xml
+++ b/app/src/main/res/layout/activity_details_client.xml
@@ -50,7 +50,8 @@
             android:maxLines="1"
             android:singleLine="true"
             android:padding="5dp"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:textSize="18dp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -68,7 +69,8 @@
             android:maxLines="1"
             android:singleLine="true"
             android:padding="5dp"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:textSize="18dp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -86,7 +88,8 @@
             android:maxLines="1"
             android:singleLine="true"
             android:padding="5dp"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:textSize="18dp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -104,7 +107,8 @@
             android:maxLines="1"
             android:singleLine="true"
             android:padding="5dp"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:textSize="18dp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -122,7 +126,8 @@
             android:maxLines="1"
             android:singleLine="true"
             android:padding="5dp"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:textSize="18dp" />
 
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
@@ -139,7 +144,8 @@
             android:maxLines="1"
             android:singleLine="true"
             android:padding="5dp"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:textSize="18dp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -157,7 +163,8 @@
             android:maxLines="1"
             android:singleLine="true"
             android:padding="5dp"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:textSize="18dp" />
 
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
@@ -174,7 +181,8 @@
             android:maxLines="1"
             android:singleLine="true"
             android:padding="5dp"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:textSize="18dp" />
 
     </android.support.design.widget.TextInputLayout>
 
