Nom agence dans navbar + petites modifs

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="colorOccupee">#f46741</color>
     <color name="colorAjouter">#197596</color>
     <color name="colorRestitution">#962318</color>
-    <color name="colorTitre">#FFF</color>
+    <color name="colorTitre">#000</color>
 </resources>
