--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#197596</color>
     <color name="colorAccent">#197596</color>
     <color name="colorWhite">#FFF</color>
-    <color name="colorLibre">#41f46e</color>
-    <color name="colorOccupee">#f46741</color>
+    <color name="colorLibre">#A0C55F</color>
+    <color name="colorOccupee">#BF4D28</color>
     <color name="colorAjouter">#197596</color>
     <color name="colorRestitution">#962318</color>
     <color name="colorTitre">#000</color>
